WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
144468
Asynchronous (or timed-out synchronous) resize flashes white instead of page background color
https://bugs.webkit.org/show_bug.cgi?id=144468
Summary
Asynchronous (or timed-out synchronous) resize flashes white instead of page ...
Tim Horton
Reported
2015-04-30 13:52:17 PDT
Created
attachment 252085
[details]
patch Use the pageExtendedBackgroundColor for the background color of the WKView, if we have one (and aren't using a transparent background). This means during asynchronous resize or other cases where the Web process isn't keeping up with the UI process during a resize, we'll see background color instead of white.
Attachments
patch
(2.16 KB, patch)
2015-04-30 13:52 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
WebKit Commit Bot
Comment 1
2015-04-30 13:54:09 PDT
Attachment 252085
[details]
did not pass style-queue: ERROR: Source/WebKit2/ChangeLog:1: ChangeLog entry has no bug number [changelog/bugnumber] [5] Total errors found: 1 in 2 files If any of these errors are false positives, please file a bug against check-webkit-style.
Tim Horton
Comment 2
2015-04-30 15:18:46 PDT
http://trac.webkit.org/changeset/183647
WebKit Commit Bot
Comment 3
2015-05-22 16:25:49 PDT
Re-opened since this is blocked by
bug 145326
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug